--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav class="sidebar">
         <div class="icon-div">
           <div class="spotify-logo">
-              <img src="/Assets/Spotify logo.svg" width="180px" alt="Spotify Logo" />
+              <img src="./Assets/Spotify-logo.svg" width="180px" alt="Spotify Logo" />
           </div>
           <div>
             <div class="icon-links home-link" style="color: #ffffff; opacity: 1">
@@ -20,11 +20,11 @@
               <a href="./playlist.html">Home</a>
             </div>
             <div class="icon-links ">
-              <img src="./assets/search.png" alt="Search" />
+              <img src="./Assets/search.png" alt="Search" />
               <a href="#">Search</a>
             </div>
             <div class="icon-links">
-              <img src="./assets/library.png" />
+              <img src="./Assets/library.png" />
               <a href="./playlist.html">Your Library</a>
             </div>
           </div>
