--- a/playlist.html
+++ b/playlist.html
@@ -15,19 +15,19 @@
       <nav class="sidebar">
         <div class="icon-div">
           <div class="spotify-logo">
-              <img src="/Assets/Spotify logo.svg" width="140px" alt="Spotify Logo" />
+              <img src="./Assets/Spotify-logo.svg" width="140px" alt="Spotify Logo" />
           </div>
           <div>
-            <div class="icon-links home-link" style="color: #ffffff; opacity: 1">
-              <img src="./assets/home.png" alt="Home" />
+            <div class="icon-links home-link">
+              <img src="./Assets/home.png" alt="Home" />
               <a href="#">Home</a>
             </div>
             <div class="icon-links">
-              <img src="./assets/search.png" alt="Search" />
+              <img src="./Assets/search.png" alt="Search" />
               <a href="#">Search</a>
             </div>
             <div class="icon-links">
-              <img src="./assets/library.png" />
+              <img src="./Assets/library.png" />
               <p>Your Library</p>
             </div>
           </div>
