--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           </div>
           <div>
             <div class="icon-links home-link" style="color: #ffffff; opacity: 1">
-              <img src="./assets/home.png" alt="Home" />
+              <img src="./Assets/home.png" alt="Home" />
               <a href="./playlist.html">Home</a>
             </div>
             <div class="icon-links ">
