--- a/playlist.html
+++ b/playlist.html
@@ -22,7 +22,7 @@
                 <div>
                     <div class="icon-links home-link">
                         <img src="./Assets/home.png" alt="Home" />
-                        <a href="#">Home</a>
+                        <a href="./index.html">Home</a>
                     </div>
                     <div class="icon-links">
                         <img src="./Assets/search.png" alt="Search" />
@@ -57,10 +57,10 @@
             <div class="main-content-1">
                 <img src="./Assets/스크린샷 2021-03-16 오후 4.04 2.png" alt="album-pic">
                 <div class="headings">
-                    <p>PLAYLIST</p>
+                    <p class="headings-p1">PLAYLIST</p>
                     <h1>Pop Right Now</h1>
-                    <p>Pop Right Now</p>
-                    <p>
+                    <p class="headings-p2">
+                        Your daily update of the most played tracks right now - Global. <br>
                         <span>Spotify</span> &#x2022 860,305 likes &#x2022 100 songs, 5 hr 5 min
                     </p>
                 </div>
@@ -127,7 +127,7 @@
                     <p class="col-num">3</p>
                     <div class="col-title">
                         <div class="title-data">
-                            <img src="./Assets/Rectangle 20.png" width="50" height="50px">
+                            <img src="./Assets/3.jpeg" width="50" height="50px">
                             <div>
                                 <h4>We’re Good</h4>
                                 <p>Dua Lipa</p>
@@ -148,7 +148,7 @@
                     <p class="col-num">4</p>
                     <div class="col-title">
                         <div class="title-data">
-                            <img src="./Assets/Rectangle 20.png" width="50" height="50px">
+                            <img src="./Assets/4.jpeg" width="50" height="50px">
                             <div>
                                 <h4>We’re Good</h4>
                                 <p>Dua Lipa</p>
@@ -169,7 +169,7 @@
                     <p class="col-num">5</p>
                     <div class="col-title">
                         <div class="title-data">
-                            <img src="./Assets/Rectangle 20.png" width="50" height="50px">
+                            <img src="./Assets/5.jpeg" width="50" height="50px">
                             <div>
                                 <h4>We’re Good</h4>
                                 <p>Dua Lipa</p>
@@ -190,7 +190,7 @@
                     <p class="col-num">6</p>
                     <div class="col-title">
                         <div class="title-data">
-                            <img src="./Assets/Rectangle 20.png" width="50" height="50px">
+                            <img src="./Assets/6.jpeg" width="50" height="50px">
                             <div>
                                 <h4>We’re Good</h4>
                                 <p>Dua Lipa</p>
@@ -211,7 +211,7 @@
                     <p class="col-num">7</p>
                     <div class="col-title">
                         <div class="title-data">
-                            <img src="./Assets/Rectangle 20.png" width="50" height="50px">
+                            <img src="./Assets/7.jpeg" width="50" height="50px">
                             <div>
                                 <h4>We’re Good</h4>
                                 <p>Dua Lipa</p>
@@ -232,7 +232,7 @@
                     <p class="col-num">8</p>
                     <div class="col-title">
                         <div class="title-data">
-                            <img src="./Assets/Rectangle 20.png" width="50" height="50px">
+                            <img src="./Assets/8.jpeg" width="50" height="50px">
                             <div>
                                 <h4>We’re Good</h4>
                                 <p>Dua Lipa</p>
@@ -253,7 +253,7 @@
                     <p class="col-num">9</p>
                     <div class="col-title">
                         <div class="title-data">
-                            <img src="./Assets/Rectangle 20.png" width="50" height="50px">
+                            <img src="./Assets/9.jpeg" width="50" height="50px">
                             <div>
                                 <h4>We’re Good</h4>
                                 <p>Dua Lipa</p>
@@ -274,7 +274,7 @@
                     <p class="col-num">10</p>
                     <div class="col-title">
                         <div class="title-data">
-                            <img src="./Assets/Rectangle 20.png" width="50" height="50px">
+                            <img src="./Assets/10.jpeg" width="50" height="50px">
                             <div>
                                 <h4>We’re Good</h4>
                                 <p>Dua Lipa</p>
